<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:id="@+id/group1"
    android:checkableBehavior="single"
    >
<item android:id="@+id/news"
    android:title="@string/news"
    android:icon="@drawable/ic_explore_white_24dp"
    />
<item android:id="@+id/mood"
    android:title="@string/mood"
    android:icon="@drawable/ic_mood_white_24dp"
    />
<item android:id="@+id/meizi"
    android:title="@string/local_florist"
    android:icon="@drawable/ic_local_florist_white_24dp"
    />
<item android:id="@+id/move"
    android:title="@string/move"
    android:icon="@drawable/ic_movie_white_24dp"
    />
</group>
    <group android:id="@+id/group2"
        android:checkableBehavior="single"
        >
        <item android:id="@+id/setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings_white_24dp"
            />
    </group>
    <group android:id="@+id/group3"
        android:checkableBehavior="single"
        >
        <item android:id="@+id/nav_theme"
            android:title="主题风格"/>
        <item android:id="@+id/nav_night"
            android:title="夜间模式"/>
        <item android:id="@+id/nav_suggestion"
            android:title="意见反馈"/>
        <item android:id="@+id/nav_about"
            android:title="关于"/>
    </group>

</menu>