<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@android:color/transparent"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/pop_bg"
            >
            <TextView
                android:id="@+id/take_photo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/photo"
                android:gravity="center"
                android:textColor="#CA836A"
                android:background="@drawable/pop_bg"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/album"
                android:gravity="center"
                android:textColor="#CA836A"
                android:textSize="16sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/pop_bg"
            />

    </LinearLayout>
