<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_shape"
    >
    <com.example.dk.mytest.view.TitleView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="65dp"/>
    <ImageView
        android:id="@+id/touxiang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/image_3x" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_shape"
        >
        <RelativeLayout
            android:background="@color/background_common"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            >
            <ImageView
                android:id="@+id/account_pic"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_user3x"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                />

            <ImageView
                android:id="@+id/down_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_down3x"
                />

            <EditText
                android:id="@+id/account"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:hint="@string/account"
                android:textColorHint="@color/forget"
                android:textColor="@color/text_choose_true"
                android:textSize="17sp"
                android:inputType="textEmailAddress"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@null"
                 />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@color/shadow"
            />
        <RelativeLayout
            android:background="@color/background_common"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            >
            <ImageView
                android:id="@+id/password_pic"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_password2x"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                />
            <EditText
                android:id="@+id/psw"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/password_pic"
                android:layout_marginLeft="16dp"
                android:hint="@string/password"
                android:textColorHint="@color/forget"
                android:textColor="@color/text_choose_true"
                android:textSize="17sp"
                android:inputType="textPassword"
                android:background="@null"
                />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_bt"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="17dp"
        />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="20dp"
         >
         <TextView
             android:id="@+id/foget_psw"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="10dp"
             android:text="@string/forget"
             android:textColor="@color/forget"
             />
         <TextView
             android:id="@+id/register"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:text="@string/register"
             android:textColor="@color/forget"
             />

     </RelativeLayout>
</LinearLayout>
